small gap in number grid fixed

--- a/Day-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Day-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -19,7 +19,7 @@
 
 
 .numberBtn {
-  width: 33.33333%;
+  width: 33.333334%;
   border: 1px solid #979797;
   background: white;
   padding: .9rem 0;
